@@ -10,6 +10,7 @@ import dev.langchain4j.model.chat.request.ToolChoice;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
+import java.util.Arrays;
 
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -18,15 +19,15 @@ class ChatRequestValidationUtilsTest {
 
     @Test
     void validateMessages_shouldAllowTextContent() {
-        UserMessage message = new UserMessage(List.of(new TextContent("hello")));
-        assertThatCode(() -> ChatRequestValidationUtils.validateMessages(List.of(message)))
+        UserMessage message = new UserMessage(Arrays.asList(new TextContent("hello")));
+        assertThatCode(() -> ChatRequestValidationUtils.validateMessages(Arrays.asList(message)))
                 .doesNotThrowAnyException();
     }
 
     @Test
     void validateMessages_shouldRejectNonTextContent() {
-        UserMessage message = new UserMessage(List.of(new ImageContent("http://image.com")));
-        assertThatThrownBy(() -> ChatRequestValidationUtils.validateMessages(List.of(message)))
+        UserMessage message = new UserMessage(Arrays.asList(new ImageContent("http://image.com")));
+        assertThatThrownBy(() -> ChatRequestValidationUtils.validateMessages(Arrays.asList(message)))
                 .isInstanceOf(UnsupportedFeatureException.class)
                 .hasMessageContaining("Content of type image is not supported");
     }
@@ -34,14 +35,14 @@ class ChatRequestValidationUtilsTest {
     @Test
     void validateTools_shouldRejectNonEmptyList() {
         ToolSpecification tool = ToolSpecification.builder().name("myTool").build();
-        assertThatThrownBy(() -> ChatRequestValidationUtils.validate(List.of(tool)))
+        assertThatThrownBy(() -> ChatRequestValidationUtils.validate(Arrays.asList(tool)))
                 .isInstanceOf(UnsupportedFeatureException.class)
                 .hasMessageContaining("tools are not supported yet");
     }
 
     @Test
     void validateTools_shouldAllowEmptyList() {
-        assertThatCode(() -> ChatRequestValidationUtils.validate(List.of()))
+        assertThatCode(() -> ChatRequestValidationUtils.validate(Arrays.asList()))
                 .doesNotThrowAnyException();
     }
 
