@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.List;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 
 class ModerationRequestTest {
@@ -15,7 +16,7 @@ class ModerationRequestTest {
 
     @Test
     void should_throw_when_messages_is_empty_list() {
-        assertThatThrownBy(() -> ModerationRequest.builder().texts(List.of()).build())
+        assertThatThrownBy(() -> ModerationRequest.builder().texts(Arrays.asList()).build())
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -29,7 +30,7 @@ class ModerationRequestTest {
     void should_create_request_with_single_message() {
         // when
         ModerationRequest request =
-                ModerationRequest.builder().texts(List.of("some text")).build();
+                ModerationRequest.builder().texts(Arrays.asList("some text")).build();
 
         // then
         assertThat(request.texts()).containsExactly("some text");
@@ -40,7 +41,7 @@ class ModerationRequestTest {
     void should_create_request_with_multiple_messages() {
         // when
         ModerationRequest request = ModerationRequest.builder()
-                .texts(List.of("first", "second", "third"))
+                .texts(Arrays.asList("first", "second", "third"))
                 .build();
 
         // then
@@ -51,17 +52,17 @@ class ModerationRequestTest {
     void should_have_correct_equals_and_hashCode() {
         // given
         ModerationRequest request1 =
-                ModerationRequest.builder().texts(List.of("text")).build();
+                ModerationRequest.builder().texts(Arrays.asList("text")).build();
         ModerationRequest request2 =
-                ModerationRequest.builder().texts(List.of("text")).build();
+                ModerationRequest.builder().texts(Arrays.asList("text")).build();
         ModerationRequest request3 =
-                ModerationRequest.builder().texts(List.of("other")).build();
+                ModerationRequest.builder().texts(Arrays.asList("other")).build();
         ModerationRequest request4 = ModerationRequest.builder()
-                .texts(List.of("text"))
+                .texts(Arrays.asList("text"))
                 .modelName("model-a")
                 .build();
         ModerationRequest request5 = ModerationRequest.builder()
-                .texts(List.of("text"))
+                .texts(Arrays.asList("text"))
                 .modelName("model-a")
                 .build();
 
@@ -78,14 +79,14 @@ class ModerationRequestTest {
     void should_create_copy_with_toBuilder() {
         // given
         ModerationRequest original = ModerationRequest.builder()
-                .texts(List.of("original"))
+                .texts(Arrays.asList("original"))
                 .modelName("original-model")
                 .build();
 
         // when
         ModerationRequest copy = original.toBuilder().build();
         ModerationRequest modified = original.toBuilder()
-                .texts(List.of("modified"))
+                .texts(Arrays.asList("modified"))
                 .modelName("modified-model")
                 .build();
 
@@ -100,7 +101,7 @@ class ModerationRequestTest {
     void should_create_request_with_modelName() {
         // when
         ModerationRequest request = ModerationRequest.builder()
-                .texts(List.of("some text"))
+                .texts(Arrays.asList("some text"))
                 .modelName("custom-model")
                 .build();
 
