@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import dev.langchain4j.data.document.Metadata;
 import java.util.Map;
+import java.util.Collections;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
@@ -18,7 +19,7 @@ class IsGreaterThanTest extends AbstractComparisonTest<IsGreaterThan> {
     @ParameterizedTest
     @CsvSource({"0, false", "4, false", "5, false", "6, true"})
     void comparisonValue(Integer value, boolean expectedResult) {
-        Metadata metadata = Metadata.from(Map.of("key", value));
+        Metadata metadata = Metadata.from(Collections.singletonMap("key", value));
         assertThat(subject.test(metadata)).isEqualTo(expectedResult);
     }
 }
